# esp-watt-master

./: .editorconfig  .gitignore  CMakeCache.txt  CMakeLists.txt  partitions_example.csv  sdkconfig
main/: CMakeLists.txt  Kconfig.projbuild  main.cpp  upload_script.html
main/include/: main.h  secrets.h  utils.h
main/include/objects/: CommandInterface.h  Relay.h  Wifi.h
main/include/tasks/: debugTask.h  displayTask.h  internetTask.h  ledBlinkTask.h  mqttTask.h  relayTask.h
main/include/utils/: debug.h  file_serving_example_common.h  mqtt.h  scanner.h  wifi.h
main/lib/: website.h
main/src/objects/: CommandInterface.cpp  Relay.cpp  Wifi.cpp
main/src/tasks/: debugTask.cpp  displayTask.cpp  internetTask.cpp  ledBlinkTask.cpp  mqttTask.cpp  relayTask.cpp
main/src/utils/: debug.cpp  file_server.cpp  mount.cpp  mqtt.cpp  scanner.cpp  wifi.cpp
